# monitoring

./: .gitignore  AGENT_NATIVE_API_EXAMPLES.md  AGENT_NATIVE_CHECKLIST.md  AGENT_NATIVE_INDEX.md  AGENT_NATIVE_KEY_INSIGHTS.md  AGENT_NATIVE_REVIEW.md  ALL_FIXES_SUMMARY.md  ANALYSIS_SUMMARY.md  ARCHITECTURAL_REVIEW.md  ARCHITECTURE_CODE_REFERENCES.md  ARCHITECTURE_EXECUTIVE_SUMMARY.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_PATTERNS.md  ARCHITECTURE_REVIEW_DETAILED.md  CLAUDE.md  CODE_REVIEW_ACTION_PLAN.md  CODE_REVIEW_SUMMARY.md  CODE_REVIEW_SYNTHESIS.md  CRITICAL_FIXES_APPLIED.md  DOCUMENTATION_INDEX.md  FILE_PATTERNS.md  KIERAN_CODE_REVIEW.md  KIERAN_COMPREHENSIVE_REVIEW.md  KIERAN_FINDINGS.txt  KIERAN_FIXES_CHECKLIST.md  KIERAN_REVIEW_ACTIONABLE.md  KIERAN_REVIEW_INDEX.md  KIERAN_REVIEW_SUMMARY.txt  P2_FIXES_APPLIED.md  PATTERNS_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_FIXES_ROADMAP.md  QUICK_REFERENCE.md  README.md  REVIEW_COMPLETE.txt  REVIEW_EXECUTIVE_SUMMARY.md  REVIEW_INDEX.md  SECURITY_AUDIT_INDEX.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_SUMMARY.md  (+17 more)
.claude/: settings.json
carino_research/: generate_carino_pdf.py
docs/: ANALYTICS_CONTEXT_ARCHITECTURE.md  CSV_ELIMINATION_REPORT.md  DOCSTRING_AUDIT.md  OPERATIONS_API_GUIDE.md  PHASE_C_COMPLETION_REPORT.md  PHASE_C_INDEX.md
docs/analysis/: README.md  (+4 more)
input/: factor_returns.csv
scripts/: generate_sample_data.py
tests/: conftest.py  test_breach.py  test_carino.py  test_cli.py  test_data.py  test_parquet_output.py  test_portfolios.py  test_reports.py  test_thresholds.py  test_windows.py
(+164 files in other folders)
